# AgentDevPet

./: .gitignore  agent_os.py  data.db  load_env.sh  main.py  pyproject.toml  web.py
devkit/: agent_dev.py  agent_team.py  movie_agent.py  prompt.py
devkit/db/: settings.py
devkit/test/: test_pexels_tools.py
devkit/tools/: pexels.py
